# My_PPP

./: .gitignore  CMakeLists.txt  Read.me
chapter02/: CMakeLists.txt
chapter02/src/drill/: Hello_world.cpp
chapter02/src/exercises/: exer_2_1.cpp
chapter03/: CMakeLists.txt
chapter03/src/drill/: letter.cpp
chapter03/src/exercises/: exer_3_10.cpp  exer_3_11.cpp  exer_3_2.cpp  exer_3_4.cpp  exer_3_5.cpp  exer_3_6.cpp  exer_3_7.cpp  exer_3_8.cpp  exer_3_9.cpp
chapter04/: CMakeLists.txt  Read.me
chapter04/src/drill/: drill_4_1.cpp  drill_4_2_3.cpp  drill_4_4_5.cpp  drill_4_6.cpp  drill_4_7_11.cpp
chapter04/src/exer/: exer_4_1.cpp  exer_4_10.cpp  exer_4_12.cpp  exer_4_14.cpp  exer_4_15.cpp  exer_4_16.cpp  exer_4_17.cpp  exer_4_18.cpp  exer_4_19_21.cpp  exer_4_2.cpp  exer_4_3.cpp  exer_4_4.cpp  exer_4_5.cpp  exer_4_6.cpp  exer_4_7.cpp  exer_4_8.cpp  exer_4_8_9.cpp
chapter05/: CMakeLists.txt
chapter05/src/drill/: drill_5_1.cpp
chapter05/src/exer/: exer_5_10.cpp  exer_5_11.cpp  exer_5_12_13.cpp  exer_5_2.cpp  exer_5_3.cpp  exer_5_4.cpp  exer_5_5.cpp  exer_5_6.cpp  exer_5_7.cpp  exer_5_8_9.cpp
chapter06/: Read.me
chapter06/src/drill/: calculator.cpp  calculator_KaKaLot.cpp
chapter06/src/exer/: exer_6_10.cpp  exer_6_4.cpp  exer_6_5_6.cpp  exer_6_7.cpp  exer_6_9.cpp
chapter07/: Read.me
chapter07/src/drill/: calculator08buggy.cpp  calculator_KaKaLot_v2.cpp
chapter08/: Read.me
chapter08/include/drill/: drill_8_3.h
chapter08/include/exer/: exer_8_2.h  exer_8_5_6.h
chapter08/src/drill/: drill_8_2.cpp  drill_8_3.cpp  my.cpp  use.cpp
chapter08/src/exer/: exer_8_10_11.cpp  exer_8_12.cpp  exer_8_13.cpp  exer_8_2.cpp  exer_8_3.cpp  exer_8_4.cpp  exer_8_5_6.cpp  exer_8_7_8.cpp  exer_8_test.cpp
chapter09/: CMakeLists.txt  Read.me
chapter09/include/drill/: Chrono.h
chapter09/include/exer/: Book.h  Library.h  Patron.h  Person.h
chapter09/src/drill/: Chrono.cpp
chapter09/src/exer/: Book.cpp  Chapter_09_test.cpp  Chrono_test.cpp  Library.cpp  Library_test.cpp  Patron.cpp  Persion.cpp
chapter10/: Read.me
chapter10/include/drill/: Pointer.h
chapter10/src/drill/: Point.cpp  Point_main.cpp
include/: std_lib_facilities.h
